# snakemake-log-viewer

./: README.md  pyproject.toml
src/snakemake_log_viewer/: __init__.py  app.py  cli.py  run.py  style.tcss  textual.py  util.py
